# To-Do-APP-Hackathon

./: README.md  pyproject.toml
.claude/: settings.local.json
.specify/memory/: constitution.md
history/prompts/003-todo-cli/: 1-plan-for-todo-cli-phase-i.plan.prompt.md  2-generated-tasks-for-todo-cli-phase-i.tasks.prompt.md
history/prompts/constitution/: 0001-update-todo-cli-project-constitution.constitution.prompt.md
history/prompts/todo-cli/: 1-todo-cli-phase-i-specification.spec.prompt.md
specs/001-todo-cli/: spec.md
specs/001-todo-cli/checklists/: requirements.md
specs/002-todo-cli/: spec.md
specs/002-todo-cli/checklists/: requirements.md
specs/003-todo-cli/: data-model.md  implement.md  plan.md  quickstart.md  spec.md  tasks.md
specs/003-todo-cli/checklists/: requirements.md
src/: __init__.py
src/models/: __init__.py  todo.py
src/todo_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/todo_cli/cli/: __init__.py  commands.py  main.py
src/todo_cli/services/: __init__.py  todo_service.py
