[project]
name = "todo-cli"
version = "0.1.0"
description = "A simple CLI-based todo list manager"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.7",
    "rich>=13.7.0",
]

[project.scripts]
todo = "todo_cli.cli.main:cli"

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
todo_cli = ["py.typed"]